// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose hooks action hook 1`] = `
[
  {
    "actions": [
      {
        "changeset": [
          {
            "name": "termsOfUse",
            "setter": {
              "fieldsetAccess": [
                "termsOfUse",
              ],
              "kind": "fieldset-virtual-input",
              "nullable": false,
              "required": true,
              "type": "boolean",
              "validators": [],
            },
          },
        ],
        "hook": {
          "args": [
            {
              "name": "name",
              "setter": {
                "kind": "reference-value",
                "target": {
                  "access": [
                    "name",
                  ],
                  "alias": "org",
                },
              },
            },
            {
              "name": "terms",
              "setter": {
                "kind": "changeset-reference",
                "referenceName": "termsOfUse",
              },
            },
          ],
          "hook": {
            "file": "hooks.js",
            "kind": "source",
            "runtimeName": "MyRuntime",
            "target": "someHook",
          },
        },
        "kind": "execute-hook",
        "responds": false,
      },
    ],
    "authSelect": [],
    "authorize": undefined,
    "fieldset": {
      "kind": "record",
      "nullable": false,
      "record": {
        "termsOfUse": {
          "kind": "field",
          "nullable": false,
          "required": true,
          "type": "boolean",
          "validators": [],
        },
      },
    },
    "kind": "custom-one",
    "method": "POST",
    "parentContext": [],
    "path": "somePath",
    "responds": true,
    "response": undefined,
    "target": {
      "alias": "org",
      "identifyWith": {
        "name": "id",
        "paramName": "org_id",
        "refKey": "Org.id",
        "type": "integer",
      },
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
      "select": [
        {
          "alias": "name",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "name",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
    },
  },
]
`;

exports[`compose hooks composes action hook 1`] = `
{
  "changeset": [
    {
      "name": "prop",
      "setter": {
        "fieldsetAccess": [
          "prop",
        ],
        "kind": "fieldset-virtual-input",
        "nullable": false,
        "required": true,
        "type": "string",
        "validators": [],
      },
    },
  ],
  "hook": {
    "args": [
      {
        "name": "user",
        "setter": {
          "kind": "query",
          "query": {
            "filter": {
              "args": [
                {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "id",
                  ],
                },
                {
                  "kind": "literal",
                  "type": "integer",
                  "value": 1,
                },
              ],
              "kind": "function",
              "name": "is",
            },
            "fromPath": [
              "Org",
            ],
            "kind": "query",
            "limit": undefined,
            "modelRefKey": "Org",
            "name": "$query",
            "offset": undefined,
            "orderBy": undefined,
            "refKey": "N/A",
            "retCardinality": "collection",
            "retType": "Org",
            "select": [
              {
                "alias": "id",
                "expr": {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "name",
                "expr": {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "name",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "string",
                  "nullable": false,
                },
              },
            ],
          },
        },
      },
    ],
    "hook": {
      "file": "hooks/auth",
      "kind": "source",
      "runtimeName": "@GAUDI_INTERNAL",
      "target": "login",
    },
  },
  "kind": "execute-hook",
  "responds": false,
}
`;

exports[`compose hooks composes source hooks 1`] = `
{
  "apis": [
    {
      "entrypoints": [
        {
          "endpoints": [
            {
              "actions": [
                {
                  "alias": "$action_0",
                  "changeset": [
                    {
                      "name": "name",
                      "setter": {
                        "args": [],
                        "hook": {
                          "file": "hooks.js",
                          "kind": "source",
                          "runtimeName": "MyRuntime",
                          "target": "someHook",
                        },
                        "kind": "fieldset-hook",
                      },
                    },
                  ],
                  "isPrimary": true,
                  "kind": "create-one",
                  "model": "Org",
                  "select": [],
                  "targetPath": [
                    "Org",
                  ],
                },
              ],
              "authSelect": [],
              "authorize": undefined,
              "fieldset": {
                "kind": "record",
                "nullable": false,
                "record": {},
              },
              "kind": "create",
              "parentContext": [],
              "response": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
                {
                  "alias": "name",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "name",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "string",
                    "nullable": false,
                  },
                },
              ],
              "target": {
                "alias": "$target_0",
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            },
          ],
          "entrypoints": [],
          "name": "",
          "target": {
            "alias": "$target_0",
            "identifyWith": {
              "name": "id",
              "paramName": "org_id",
              "refKey": "Org.id",
              "type": "integer",
            },
            "kind": "model",
            "name": "Org",
            "namePath": [
              "Org",
            ],
            "retType": "Org",
          },
        },
      ],
      "name": undefined,
      "path": "/api",
    },
  ],
  "authenticator": undefined,
  "generators": [],
  "models": [
    {
      "aggregates": [],
      "computeds": [],
      "dbname": "org",
      "fields": [
        {
          "dbname": "id",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "id",
          "nullable": false,
          "primary": true,
          "refKey": "Org.id",
          "type": "integer",
          "unique": true,
          "validators": [],
        },
        {
          "dbname": "name",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "name",
          "nullable": false,
          "primary": false,
          "refKey": "Org.name",
          "type": "string",
          "unique": false,
          "validators": [
            {
              "arg": "name",
              "hook": {
                "file": "githubc.js",
                "kind": "source",
                "runtimeName": "MyRuntime",
                "target": "someHook",
              },
              "name": "hook",
            },
          ],
        },
      ],
      "hooks": [
        {
          "args": [],
          "hook": {
            "file": "githubc.js",
            "kind": "source",
            "runtimeName": "MyRuntime",
            "target": "someHook",
          },
          "kind": "model-hook",
          "name": "description",
          "refKey": "Org.description",
        },
      ],
      "kind": "model",
      "name": "Org",
      "queries": [],
      "refKey": "Org",
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [
    {
      "name": "MyRuntime",
      "sourcePath": "some/path/to/file",
      "type": "node",
    },
    {
      "name": "@GAUDI_INTERNAL",
      "sourcePath": "./internalExecutionRuntime",
      "type": "node",
    },
  ],
}
`;

exports[`compose hooks defaults to the default execution runtime when hook runtime is empty 1`] = `
{
  "actions": [
    {
      "alias": "$action_0",
      "changeset": [
        {
          "name": "name",
          "setter": {
            "args": [],
            "hook": {
              "file": "hooks.js",
              "kind": "source",
              "runtimeName": "MyRuntime",
              "target": "randomSlug",
            },
            "kind": "fieldset-hook",
          },
        },
      ],
      "isPrimary": true,
      "kind": "create-one",
      "model": "Org",
      "select": [],
      "targetPath": [
        "Org",
      ],
    },
  ],
  "authSelect": [],
  "authorize": undefined,
  "fieldset": {
    "kind": "record",
    "nullable": false,
    "record": {},
  },
  "kind": "create",
  "parentContext": [],
  "response": [
    {
      "alias": "id",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "id",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "integer",
        "nullable": false,
      },
    },
    {
      "alias": "name",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "name",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
  ],
  "target": {
    "alias": "$target_0",
    "kind": "model",
    "name": "Org",
    "namePath": [
      "Org",
    ],
    "retType": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose hooks inline hooks 1`] = `
{
  "apis": [
    {
      "entrypoints": [
        {
          "endpoints": [
            {
              "actions": [
                {
                  "alias": "$action_0",
                  "changeset": [
                    {
                      "name": "name",
                      "setter": {
                        "args": [],
                        "hook": {
                          "inline": "'test name'",
                          "kind": "inline",
                        },
                        "kind": "fieldset-hook",
                      },
                    },
                  ],
                  "isPrimary": true,
                  "kind": "create-one",
                  "model": "Org",
                  "select": [],
                  "targetPath": [
                    "Org",
                  ],
                },
              ],
              "authSelect": [],
              "authorize": undefined,
              "fieldset": {
                "kind": "record",
                "nullable": false,
                "record": {},
              },
              "kind": "create",
              "parentContext": [],
              "response": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
                {
                  "alias": "name",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "name",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "string",
                    "nullable": false,
                  },
                },
              ],
              "target": {
                "alias": "$target_0",
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            },
          ],
          "entrypoints": [],
          "name": "",
          "target": {
            "alias": "$target_0",
            "identifyWith": {
              "name": "id",
              "paramName": "org_id",
              "refKey": "Org.id",
              "type": "integer",
            },
            "kind": "model",
            "name": "Org",
            "namePath": [
              "Org",
            ],
            "retType": "Org",
          },
        },
      ],
      "name": undefined,
      "path": "/api",
    },
  ],
  "authenticator": undefined,
  "generators": [],
  "models": [
    {
      "aggregates": [],
      "computeds": [],
      "dbname": "org",
      "fields": [
        {
          "dbname": "id",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "id",
          "nullable": false,
          "primary": true,
          "refKey": "Org.id",
          "type": "integer",
          "unique": true,
          "validators": [],
        },
        {
          "dbname": "name",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "name",
          "nullable": false,
          "primary": false,
          "refKey": "Org.name",
          "type": "string",
          "unique": false,
          "validators": [
            {
              "arg": "name",
              "hook": {
                "inline": "'test name'",
                "kind": "inline",
              },
              "name": "hook",
            },
          ],
        },
      ],
      "hooks": [
        {
          "args": [],
          "hook": {
            "inline": "'some description'",
            "kind": "inline",
          },
          "kind": "model-hook",
          "name": "description",
          "refKey": "Org.description",
        },
      ],
      "kind": "model",
      "name": "Org",
      "queries": [],
      "refKey": "Org",
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "runtimes": [
    {
      "name": "MyRuntime",
      "sourcePath": "some/path/to/file",
      "type": "node",
    },
    {
      "name": "@GAUDI_INTERNAL",
      "sourcePath": "./internalExecutionRuntime",
      "type": "node",
    },
  ],
}
`;
